Fix layout issue on error pages

--- a/wh_application/module/WebHemi2/resources/default/static/css/login.css
+++ b/wh_application/module/WebHemi2/resources/default/static/css/login.css
@@ -26,24 +26,15 @@ body {
 }
 
 #loginForm {
-    background: rgba(255,255,255,0.5);
-    position: absolute;
-    bottom: 80px;
-    left: 50px;
-    padding: 20px;
-    z-index: 100;
-    border-radius: 15px;
+
 }
 
 #loginForm form {
-    padding: 10px 0;
-    line-height: 1.5em;
-    font-size: 16px;
-    white-space: nowrap;
+
 }
 
 #loginForm form div.element {
-    padding: 5px;
+
 }
 
 #loginForm form legend {
@@ -51,18 +42,7 @@ body {
 }
 
 #loginForm form label {
-    margin: 0;
-    vertical-align: top;
-    display: inline-block;
-    width: 40px;
-    height: 0 !important;
-    padding-top: 36px;
-    background: #f2f2f2;
-    border: 1px solid #cccdcf;
-    border-right: 0;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    overflow: hidden;
+
 }
 
 #loginForm form label span {
@@ -71,19 +51,7 @@ body {
 
 #loginForm form input[type=text],
 #loginForm form input[type=password] {
-    margin: 0;
-    vertical-align: top;
-    display: inline-block;
-    font-size: 13px;
-    color: #343434;
-    min-width: 150px;
-    height: 20px;
-    background: #fbfbfb;
-    border: 1px solid #cccdcf;
-    padding: 8px 10px;
-    box-shadow: inset 0 2px 3px #e8e8e8;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+
 }
 
 #switcher {
